# sswfe

./: .sync  Makefile  README.md  environment.yml
docs/: Check_IslandWake_ExpData.ipynb  Untitled.ipynb  alt-timesteppers-analysis.ipynb  alt-timesteppers-comparisons.ipynb  branson-2d-test.ipynb  check-swe-filter.ipynb  check-swe-prior.ipynb  dataset-small-tests.ipynb  debug-covariance.ipynb  debug-filter-init-covariance.ipynb  feat-dfg-2d-3-comparison.ipynb  featflow-dfg-2d-3-test.ipynb  filter-mismatch-checking-long-sim.ipynb  hilbert-GP-comparisons.ipynb  jfm-run-8-filter-setup-testing.ipynb  jfm-run-8-noise-estimation-divergence.ipynb  jfm-run-8-noise-estimation-fft.ipynb  jfm-run-8-noise-fft-estimation.ipynb  jfm-run-8-simple-comparisons.ipynb  lorenz-lyapunov-exponents.ipynb  lyn-rodi-example-analysis.ipynb  ns-fenicsx-hdf5-output-analysis.ipynb  plots-1d-bump-FEM-convergence.ipynb  plots-1d-bump-intro-examples.ipynb  pyvista-DFG-testing.ipynb  swe-1d-bump-comparisons.ipynb  swe-1d-bump-deterministic-stability.ipynb  swe-1d-bump-filter-comparison.ipynb  swe-filter-1d-bump-example.ipynb  swe-filter-1d-bump-misspecified-comparison.ipynb  swe-filter-1d-errors.ipynb  swe-filter-1d-tidal-example-lr.ipynb  tidal-example-filter-mismatch-comparison.ipynb  tidal-example-swe-filter-1d.ipynb  weak-form.tex
scripts/: analyse_swe_1d_bump.py  check-swe-filter.py  check_swe_filter.py  convert_mesh.py  figures.py  generate_mesh.py  (+39 more)
swfe/: README.md  pyproject.toml
swfe/swfe/: swe_2d.py  swe_2d.py~  swe_les.py
swfe/tests/: test_swe_2d.py  test_swe_2d.py~  test_swe_les.py
